Multiple examples of graphs added to correct id conflicts (each is isolated); hide other graphs so only one is visible at a time.

--- a/src/graphify.css
+++ b/src/graphify.css
@@ -47,6 +47,7 @@
 }
 
 .data-graph {
+    z-index: 10;
     position: absolute;
     margin-top: 1.0rem;
     min-height: 20px;
